RESOLVED FIXED213135
REGRESSION(r261985): Unable to respond to large comments on Bugzilla with always-on scrollbars
https://bugs.webkit.org/show_bug.cgi?id=213135
Summary REGRESSION(r261985): Unable to respond to large comments on Bugzilla with alw...
Chris Dumez
Reported 2020-06-12 10:01:53 PDT
Unable to respond to large comments on Bugzilla: 1. Go to https://bugs.webkit.org/show_bug.cgi?id=212981 2. Click the "Reply" link next to comment #14 -> Notice that the page hangs
Attachments
Patch (14.56 KB, patch)
2020-06-12 21:07 PDT, Simon Fraser (smfr)
no flags
Chris Dumez
Comment 1 2020-06-12 10:02:40 PDT
This is a recent regression, I am trying to bisect now.
Chris Dumez
Comment 2 2020-06-12 10:04:01 PDT
Radar WebKit Bug Importer
Comment 4 2020-06-12 10:18:55 PDT
Chris Dumez
Comment 5 2020-06-12 10:19:07 PDT
Confirmed regression from Simon's http://trac.webkit.org/changeset/261985/webkit.
Simon Fraser (smfr)
Comment 6 2020-06-12 13:49:33 PDT
We programmatically scroll on the main thread to reveal the text field, and then AsyncScrollingCoordinator::synchronizeStateFromScrollingTree() clobbers that scroll offset with the current state of the scrolling tree.
Simon Fraser (smfr)
Comment 7 2020-06-12 21:07:51 PDT
EWS
Comment 8 2020-06-12 23:13:17 PDT
Committed r262996: <https://trac.webkit.org/changeset/262996> All reviewed patches have been landed. Closing bug and clearing flags on attachment 401824 [details].
Note You need to log in before you can comment on or make changes to this bug.